<resources>
    <string name="app_name">FinancieraOh</string>
    <string name="no_favorite_cities">Por favor de click en la barra de busqueda para consultar clima de diferentes ciudades.</string>
    <string name="search">Buscar ciudad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temperatura">Temperatura</string>
    <string name="temperatura_app">Sensación térmica</string>
    <string name="humidity">Humedad</string>
    <string name="pres_text">Presión</string>
    <string name="pres">Presión</string>
    <string name="wind_spd">Velocidad del viento</string>
    <string name="uv">Índice UV</string>
    <string name="precip">Indice de lluvia</string>
    <string name="forecast">Pronóstico de las próximas horas</string>
    <string name="forecast_day">Pronóstico de los próximos días</string>
    <string name="name_city">%1$s, %2$s</string>
    <string name="temp">%1$d °C</string>
</resources>