<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_5"
    tools:context=".ui.weather.FragmentWeather">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="Guayaquil, Ecuador"
                android:textColor="@color/grey_60"
                android:textSize="32sp"
                app:layout_constraintEnd_toStartOf="@+id/img_weather"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_weather"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/name_city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/name_city" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:text="descripcion del clima"
                android:textColor="@color/grey_40"
                app:layout_constraintEnd_toStartOf="@+id/img_weather"
                app:layout_constraintStart_toStartOf="@+id/name_city"
                app:layout_constraintTop_toBottomOf="@+id/name_city" />

            <TextView
                android:id="@+id/text_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/grey_40"
                android:text="@string/temperatura"
                app:layout_constraintStart_toStartOf="@+id/description"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperatura"
                android:textColor="@color/grey_40"
                app:layout_constraintBottom_toBottomOf="@+id/text_temp"
                app:layout_constraintEnd_toEndOf="@+id/app_temp"
                app:layout_constraintStart_toStartOf="@+id/app_temp"
                app:layout_constraintTop_toTopOf="@+id/text_temp" />

            <TextView
                android:id="@+id/text_app_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/temperatura_app"
                android:textColor="@color/grey_40"
                app:layout_constraintStart_toStartOf="@+id/text_temp"
                app:layout_constraintTop_toBottomOf="@+id/text_temp" />

            <TextView
                android:id="@+id/app_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/temperatura"
                android:textColor="@color/grey_40"
                app:layout_constraintBottom_toBottomOf="@+id/text_app_temp"
                app:layout_constraintStart_toEndOf="@+id/text_app_temp"
                app:layout_constraintTop_toTopOf="@+id/text_app_temp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                android:textColor="@color/grey_40"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_app_temp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/humidity_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/humidity"
                        android:textColor="@color/grey_40" />

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/humidity"
                        android:textColor="@color/grey_40" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignBottom="@+id/humidity"
                        android:layout_marginTop="4dp"
                        android:background="@color/grey_40"
                        android:textColor="@color/grey_40" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/pres_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/pres_text"
                        android:textColor="@color/grey_40" />

                    <TextView
                        android:id="@+id/pres"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/pres"
                        android:textColor="@color/grey_40" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignBottom="@+id/pres"
                        android:layout_marginTop="4dp"
                        android:background="@color/grey_40"
                        android:textColor="@color/grey_40" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/wind_spd_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/wind_spd"
                        android:textColor="@color/grey_40" />

                    <TextView
                        android:id="@+id/wind_spd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/wind_spd"
                        android:textColor="@color/grey_40" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignBottom="@+id/wind_spd"
                        android:layout_marginTop="4dp"
                        android:background="@color/grey_40" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/uv_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/uv"
                        android:textColor="@color/grey_40" />

                    <TextView
                        android:id="@+id/uv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/uv"
                        android:textColor="@color/grey_40" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignBottom="@+id/uv"
                        android:layout_marginTop="4dp"
                        android:background="@color/grey_40" />
                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/forecast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/forecast"
                android:textColor="@color/grey_40"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/minutely"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"

                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forecast"
                tools:itemCount="3"
                tools:listitem="@layout/card_view_minutely" />

            <TextView
                android:id="@+id/forecast_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/forecast_day"
                android:textColor="@color/grey_40"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/minutely" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/daily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="64dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forecast_day" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>